# BestBuyProductWatcher

./: Cargo.toml  LICENSE  README.md  products.csv  products.txt
src/: main.rs
